tests/error/function.nx
fun main() = (
    var value = func 0;
)
